test/fails/fewer_args.imp.int
Provided 0 argument(s) to function "one", which takes 1!
